build: add new dependencies for google sheets api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ dependencies = [
   "numpy>=2.3"
 ]
 
+[project.optional-dependencies]
+sheets = [
+    "google-api-python-client",
+    "google-auth-oauthlib"
+]
+
 [project.scripts]
 metrics = "metrics_analytics.cli:app"
 
