feat(export): Add uploader client to allow for easy updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sheets = [
 
 [project.scripts]
 metrics = "metrics_analytics.cli:app"
+metrics-export = "metrics_export.cli:app"
 
 [tool.pytest.ini_options]
 addopts = "-q"
